# octemu

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.rst  core.c  core.h  octemu.c  octemu.h  sdl-settings.cmake  tc-mingw.cmake
.github/workflows/: build.yml
pico/: CMakeLists.txt  README.rst  fonts.h  games.yml  octemu_pico.c  render_romc.py  rom.c.jinja  rom_config.h  sh1106.c  sh1106.h
wasm/: index.html  index.html.jinja  octemu_wasm.c  render_index_html.py
